Fix layout issue on top suggestion

--- a/client/components/domains/domain-product-price/style.scss
+++ b/client/components/domains/domain-product-price/style.scss
@@ -30,7 +30,7 @@
 
 	.is-section-signup &:not( .domain-product-price__domain-step-signup-flow ) {
 		@include breakpoint-deprecated( '>660px' ) {
-			padding-left: 1em;
+			//padding-left: 1em;
 			padding-right: 1em;
 		}
 	}
